Fix #302 - Set to visible the '?' on mobile version

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1248,3 +1248,8 @@ h3.titulo-destaque
         float: none
         margin: 0
         width: 100%
+  table
+    .position
+      a
+        margin-left: 0
+        margin-top: 5px
